fix photo overwritten and menu wrap

--- a/src/app/modules/define-pages/texteditor/texteditor.component.scss
+++ b/src/app/modules/define-pages/texteditor/texteditor.component.scss
@@ -28,5 +28,6 @@ mat-card{
 }
 .photo{
     margin: 10px;
+    margin-left: 0px;
 }
 
