--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,8 +57,8 @@ a .ng-star-inserted:hover {
     background-color: var(--mainTitleColor);
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
-    border-bottom:2px solid var(--maincolor1);
-    border-top:2px solid var(--maincolor1);
+    border-bottom:1px solid var(--maincolor1);
+    border-top:1px solid var(--maincolor1);
     color: white;
     //clip-path       : polygon(0 0, 90% 0, 100% 50%, 90% 100%,0% 100%);
 }
